--- a/index.html
+++ b/index.html
@@ -212,11 +212,60 @@
                         </li>
                     </ul>
                 </li>
-                <!--TRIBUTOS-->
+                <!--TRÂMITE-->
+                <!-- OBRAS -->
                 <li class="tree-node">
                     <a href="#" class="node-link setor">
-                        <img src="imagens/TRIBUTOS.png" alt="Setor Image" class="node-image">
-                        <span class="node-label">TRIBUTOS</span>
+                        <img src="imagens/obras.png" alt="Setor Image" class="node-image">
+                        <span class="node-label">OBRAS</span>
+                    </a>
+                    <ul class="funcionarios">
+                        <li class="tree-node">
+                            <a href="#" class="node-link funcionario">
+                                <img src="imagens/gabriel klitzke.jpg" alt="Coordenador Image" class="node-image">
+                                <span class="node-label">Gabriel</span>
+                                <p class="node-label-cargo">ESTAGIÁRIO</p>
+                            </a>
+                        </li>
+                        <li class="tree-node">
+                            <a href="#" class="node-link funcionario">
+                                <img src="imagens/kauã.jpg" alt="Coordenador Image" class="node-image">
+                                <span class="node-label">Kauã</span>
+                                <p class="node-label-cargo">ESTAGIÁRIO</p>
+                            </a>
+                        </li>
+                    </ul>
+                </li>
+                <!-- OBRAS -->
+                 <!-- OBRAS -->
+                <li class="tree-node">
+                    <a href="#" class="node-link setor">
+                        <img src="imagens/agricultura.png" alt="Setor Image" class="node-image">
+                        <span class="node-label">AGRICULTURA</span>
+                    </a>
+                    <ul class="funcionarios">
+                        <li class="tree-node">
+                            <a href="#" class="node-link funcionario">
+                                <img src="imagens/none.png" alt="Coordenador Image" class="node-image">
+                                <span class="node-label">ODAIR</span>
+                                <p class="node-label-cargo">SERVIDOR</p>
+                            </a>
+                        </li>
+                        <li class="tree-node">
+                            <a href="#" class="node-link funcionario">
+                                <img src="imagens/wander.jpg" alt="Coordenador Image" class="node-image">
+                                <span class="node-label">WANDER</span>
+                                <p class="node-label-cargo">SERVIDOR</p>
+                            </a>
+                        </li>
+                    </ul>
+                </li>
+                <!-- OBRAS -->
+                <!--TRIBUTOS & PLANEJAMENTO-->
+                <li class="tree-node">
+                    <a href="#" class="node-link setor">
+                        <img src="imagens/tributos-planejamento.png" alt="Setor Image" class="node-image">
+                        <span class="node-label">TRIBUTOS & PLANEJAMENTO</span>
                     </a>
                     <ul class="coordenadores">
                         <li class="tree-node">
@@ -225,6 +274,11 @@
                                 <span class="node-label">KERLY</span>
                                 <p class="node-label-cargo">SERVIDORA</p>
                             </a>
+                                <a href="#" class="node-link coordenador">
+                                    <img src="imagens/aline.jpg" alt="Coordenador Image" class="node-image">
+                                    <span class="node-label">ALINE</span>
+                                    <p class="node-label-cargo">SERVIDORA</p>
+                                </a>
                             <ul class="funcionarios">
                                 <li class="tree-node">
                                     <a href="#" class="node-link">
@@ -271,7 +325,8 @@
                             </ul>
                         </li>
                     </ul>
-                </li>
+                </li> 
+                <!--TRIBUTOS & PLANEJAMENTO-->
                 <!--UNIDADE DE CONCILIAÇÃO-->
                 <li class="tree-node">
                     <a href="#" class="node-link setor">
@@ -334,7 +389,7 @@
                             </ul>
                         </li>
                     </ul>
-                </li>
+                </li> <!--UNIDADE DE CONCILIAÇÃO-->
                 <!--AUX. SERVIÇOS GERAIS-->
                 <li class="tree-node">
                     <a href="#" class="node-link setor">
@@ -352,6 +407,7 @@
                         </li>
                     </ul>
                 </li>
+                <!--AUX. SERVIÇOS GERAIS-->
                 <!--DEMUTRAN-->
                 <li class="tree-node">
                     <a href="#" class="node-link setor">
@@ -387,6 +443,7 @@
                         </li>
                     </ul>
                 </li>
+                <!--DEMUTRAN-->
                 <!-- SALA DO EMPREENDEDOR -->
                 <li class="tree-node">
                     <a href="#" class="node-link setor">
@@ -507,6 +564,7 @@
                         </li>
                     </ul>
                 </li>
+                <!-- SALA DO EMPREENDEDOR -->
                 <!-- PROCURADORIA -->
                 <li class="tree-node">
                     <a href="#" class="node-link setor">
@@ -623,6 +681,7 @@
                         </li>
                     </ul>
                 </li>
+                <!-- PROCURADORIA -->
                 <!--SINE-->
                 <li class="tree-node parceiro-setor">
                     <a href="#" class="node-link setor">
@@ -655,6 +714,7 @@
                         </li>
                     </ul>
                 </li>
+                <!--SINE-->
                 <!--ICASA-->
                 <li class="tree-node parceiro-setor">
                     <a href="#" class="node-link setor">
@@ -672,6 +732,7 @@
                         </li>
                     </ul>
                 </li>
+                <!--ICASA-->
                 <!--Epagri-->
                 <li class="tree-node parceiro-setor">
                     <a href="#" class="node-link setor">
@@ -696,6 +757,7 @@
                         </li>
                     </ul>
                 </li>
+                <!--Epagri-->
                 <!--Foto CNH-->
                 <li class="tree-node parceiro-setor">
                     <a href="#" class="node-link setor">
@@ -713,6 +775,7 @@
                         </li>
                     </ul>
                 </li>
+                <!--Foto CNH-->
                 <!--CITRAN-->
                 <li class="tree-node parceiro-setor">
                     <a href="#" class="node-link setor">
@@ -746,6 +809,7 @@
                         </li>
                     </ul>
                 </li>
+                <!--CITRAN-->
                 <!--SAMAE-->
                 <li class="tree-node parceiro-setor">
                     <a href="#" class="node-link setor">
@@ -779,6 +843,7 @@
                         </li>
                     </ul>
                 </li>
+                <!--SAMAE-->
                 <!--RECEITA-->
                 <li class="tree-node parceiro-setor">
                     <a href="#" class="node-link setor">
@@ -848,6 +913,7 @@
                         </li>
                     </ul>
                 </li>
+                <!--RECEITA-->
                 <!--JUNTA-->
                 <li class="tree-node parceiro-setor">
                     <a href="#" class="node-link setor">
@@ -865,6 +931,7 @@
                         </li>
                     </ul>
                 </li>
+                <!--JUNTA-->
                 <!--IDENTIDADE-->
                 <li class="tree-node parceiro-setor">
                     <a href="#" class="node-link setor">
@@ -953,6 +1020,7 @@
                         </li>
                     </ul>
                 </li>
+                <!--IDENTIDADE-->
             </ul>
             </li>
             </ul>
