add: organograma prefeitura

--- a/index.html
+++ b/index.html
@@ -17,7 +17,13 @@
             <img src="imagens/simplifica.png" alt="simplifica-timbo">
         </div>
         <ul>
-            <li class="menu-item"><a href="index.html">Home</a></li>
+            <li class="menu-item">
+                <a href="#">Home</a>
+                <ul>
+                    <li><a href="prefeitura.html">Prefeitura</a></li>
+                    <li><a href="index.html">Simplifica</a></li>
+                </ul>
+            </li>
             <li class="menu-item"><a href="sobre.html">Sobre</a></li>
         </ul>
     </nav>
@@ -30,7 +36,6 @@
     <button id="reload-btn" title="Recarregar página">
         <span class="icon">🔄</span>
     </button>
-
     <div class="container">
         <div class="tree">
             <ul class="tree-root">
@@ -237,7 +242,7 @@
                     </ul>
                 </li>
                 <!-- OBRAS -->
-                 <!-- OBRAS -->
+                 <!-- AGRICULTURA -->
                 <li class="tree-node">
                     <a href="#" class="node-link setor">
                         <img src="imagens/agricultura.png" alt="Setor Image" class="node-image">
@@ -260,7 +265,7 @@
                         </li>
                     </ul>
                 </li>
-                <!-- OBRAS -->
+                <!-- AGRICULTURA -->
                 <!--TRIBUTOS & PLANEJAMENTO-->
                 <li class="tree-node">
                     <a href="#" class="node-link setor">
