--- a/sobre.html
+++ b/sobre.html
@@ -15,8 +15,14 @@
                 <img src="imagens/simplifica.png" alt="simplifica-timbo">
             </div>
             <ul>
-                <li class="menu-item"><a href="index.html">Home</a></li>
-                <li class="menu-item"><a href="#">Sobre</a></li>
+                <li class="menu-item">
+                    <a href="#">Home</a>
+                    <ul>
+                        <li><a href="prefeitura.html">Prefeitura</a></li>
+                        <li><a href="index.html">Simplifica</a></li>
+                    </ul>
+                </li>
+                <li class="menu-item"><a href="sobre.html">Sobre</a></li>
             </ul>
         </nav>
 
