upd: secretarias pref

--- a/prefeitura.html
+++ b/prefeitura.html
@@ -32,8 +32,8 @@
                     <ul class="tree-root">
                         <li class="tree-node-gestao-setor">
                             <a href="#" class="node-link setor" id="gestao-link">
-                                <img src="imagens/gestao.png" alt="Setor Image" class="node-image">
-                                <span class="node-label">Gestão</span>
+                                <img src="imagens/pref.png" alt="Setor Image" class="node-image">
+                                <span class="node-label">Gabinete</span>
                             </a>
                             <ul class="coordenadores">
                                 <li class="tree-node">
@@ -50,35 +50,18 @@
                                         <p class="node-label-cargo">SERVIDORA</p>
                                     </a>
                                 </li>
-                            </ul>
-                            <ul class="gestao-estagiarios" id="gestao-estagiarios">
                                 <li class="tree-node">
-                                    <a href="#" class="node-link funcionario">
-                                        <img src="imagens/thaigor.jpg" alt="Funcionario 1 Image" class="node-image">
-                                        <span class="node-label">thaigor</span>
-                                        <p class="node-label-cargo">ESTAGIÁRIO</p>
-                                        <p></p>
+                                    <a href="#" class="node-link coordenador">
+                                        <img src="imagens/pamela longo.jpg" alt="Coordenador Image" class="node-image">
+                                        <span class="node-label">Pamela</span>
+                                        <p class="node-label-cargo">SERVIDORA</p>
                                     </a>
                                 </li>
                                 <li class="tree-node">
-                                    <a href="#" class="node-link funcionario">
-                                        <img src="imagens/viviane.jpg" alt="Funcionario 2 Image" class="node-image">
-                                        <span class="node-label">Viviane</span>
-                                        <p class="node-label-cargo">ESTAGIÁRIA</p>
-                                    </a>
-                                <li class="tree-node">
-                                    <a href="#" class="node-link funcionario">
-                                        <img src="imagens/maria odorizzi.jpg" alt="Funcionario 1 Image"
-                                            class="node-image">
-                                        <span class="node-label">Maria</span>
-                                        <p class="node-label-cargo">ESTAGIÁRIA</p>
-                                    </a>
-                                </li>
-                                <li class="tree-node">
-                                    <a href="#" class="node-link funcionario">
-                                        <img src="imagens/kriscia.jpg" alt="Funcionario 1 Image" class="node-image">
-                                        <span class="node-label">Kriscia</span>
-                                        <p class="node-label-cargo">ESTAGIÁRIA</p>
+                                    <a href="#" class="node-link coordenador">
+                                        <img src="imagens/pamela longo.jpg" alt="Coordenador Image" class="node-image">
+                                        <span class="node-label">Pamela</span>
+                                        <p class="node-label-cargo">SERVIDORA</p>
                                     </a>
                                 </li>
                             </ul>
@@ -86,11 +69,12 @@
                     </ul>
                 </li>
             </ul>
+            <ul class="tree-root">
             <ul class="tree-children">
                 <li class="tree-node">
                     <a href="#" class="node-link setor">
-                        <img src="imagens/triagem.png" alt="Setor Image" class="node-image">
-                        <span class="node-label">Triagem</span>
+                        <img src="imagens/sec-educa.png" alt="Setor Image" class="node-image">
+                        <span class="node-label">Educação</span>
                     </a>
                     <ul class="funcionarios">
                         <li class="tree-node">
@@ -104,8 +88,8 @@
                 </li>
                 <li class="tree-node">
                     <a href="#" class="node-link setor">
-                        <img src="imagens/tecnologia.png" alt="Setor Image" class="node-image">
-                        <span class="node-label">Tecnologia</span>
+                        <img src="imagens/sec-fazenda.png" alt="Setor Image" class="node-image">
+                        <span class="node-label">Fazenda e Administração</span>
                     </a>
                     <ul class="funcionarios">
                         <li class="tree-node">
@@ -117,11 +101,55 @@
                         </li>
                     </ul>
                 </li>
-                <!--CALL CENTER-->
                 <li class="tree-node">
                     <a href="#" class="node-link setor">
-                        <img src="imagens/Call-Center.png" alt="Setor Image" class="node-image">
-                        <span class="node-label">Call Center</span>
+                        <img src="imagens/sec-plan.png" alt="Setor Image" class="node-image">
+                        <span class="node-label">Planejamento, Trânsito, Meio Ambiente, Indústria, Comércio e Serviços</span>
+                    </a>
+                    <ul class="funcionarios">
+                        <li class="tree-node">
+                            <a href="#" class="node-link">
+                                <img src="imagens/mariana.jpg" alt="Employee Image" class="node-image">
+                                <span class="node-label">Mariana</span>
+                                <p class="node-label-cargo">ESTAGIÁRIA</p>
+                            </a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="tree-node">
+                    <a href="#" class="node-link setor">
+                        <img src="imagens/sec-obras.png" alt="Setor Image" class="node-image">
+                        <span class="node-label">Obras e Serviços Urbanos</span>
+                    </a>
+                    <ul class="funcionarios">
+                        <li class="tree-node">
+                            <a href="#" class="node-link">
+                                <img src="imagens/mariana.jpg" alt="Employee Image" class="node-image">
+                                <span class="node-label"></span>
+                                <p class="node-label-cargo">ESTAGIÁRIA</p>
+                            </a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="tree-node">
+                    <a href="#" class="node-link setor">
+                        <img src="imagens/proc.png" alt="Setor Image" class="node-image">
+                        <span class="node-label">Procuradoria Geral do Municipio</span>
+                    </a>
+                    <ul class="funcionarios">
+                        <li class="tree-node">
+                            <a href="#" class="node-link">
+                                <img src="imagens/mariana.jpg" alt="Employee Image" class="node-image">
+                                <span class="node-label">Mariana</span>
+                                <p class="node-label-cargo">ESTAGIÁRIA</p>
+                            </a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="tree-node">
+                    <a href="#" class="node-link setor">
+                        <img src="imagens/sec-assis.png" alt="Setor Image" class="node-image">
+                        <span class="node-label">Saúde e Assitência Social</span>
                     </a>
                     <ul class="funcionarios">
                         <li class="tree-node">
@@ -135,16 +163,7 @@
                 </li>
             </li>
         </ul>
-        <div class="tree-connection">
-            <div class="tree-line"></div>
-            <div class="tree-line"></div>
-            <div class="tree-line"></div>
-        </div>
-        <div class="tree-root-isolated">
-            <a href="#">Setor Isolado</a>
-        </div>
-    </div>
-    </div>
+    </ul>
 </div>
 
 <script src = "js/script.js"></script>
