add:fotos dos secretarios

--- a/prefeitura.html
+++ b/prefeitura.html
@@ -38,30 +38,16 @@
                             <ul class="coordenadores">
                                 <li class="tree-node">
                                     <a href="#" class="node-link coordenador">
-                                        <img src="imagens/deisy.jpg" alt="Coordenador Image" class="node-image">
-                                        <span class="node-label">Deisy</span>
-                                        <p class="node-label-cargo">SERVIDORA</p>
+                                        <img src="imagens/pref-edson.jpg" alt="Coordenador Image" class="node-image">
+                                        <span class="node-label">Edson José Bona</span>
+                                        <p class="node-label-cargo">PRESIDENTE</p>
                                     </a>
                                 </li>
                                 <li class="tree-node">
                                     <a href="#" class="node-link coordenador">
-                                        <img src="imagens/pamela longo.jpg" alt="Coordenador Image" class="node-image">
-                                        <span class="node-label">Pamela</span>
-                                        <p class="node-label-cargo">SERVIDORA</p>
-                                    </a>
-                                </li>
-                                <li class="tree-node">
-                                    <a href="#" class="node-link coordenador">
-                                        <img src="imagens/pamela longo.jpg" alt="Coordenador Image" class="node-image">
-                                        <span class="node-label">Pamela</span>
-                                        <p class="node-label-cargo">SERVIDORA</p>
-                                    </a>
-                                </li>
-                                <li class="tree-node">
-                                    <a href="#" class="node-link coordenador">
-                                        <img src="imagens/pamela longo.jpg" alt="Coordenador Image" class="node-image">
-                                        <span class="node-label">Pamela</span>
-                                        <p class="node-label-cargo">SERVIDORA</p>
+                                        <img src="imagens/vice-douglas.jpg" alt="Coordenador Image" class="node-image">
+                                        <span class="node-label">Douglas Emanuel Marchetti</span>
+                                        <p class="node-label-cargo">VICE-PRESIDENTE</p>
                                     </a>
                                 </li>
                             </ul>
@@ -79,9 +65,9 @@
                     <ul class="funcionarios">
                         <li class="tree-node">
                             <a href="#" class="node-link">
-                                <img src="imagens/bianca.jpg" alt="Employee Image" class="node-image">
-                                <span class="node-label">Bianca</span>
-                                <p class="node-label-cargo">ESTAGIÁRIA</p>
+                                <img src="imagens/sec-alfoh.jpg" alt="Employee Image" class="node-image">
+                                <span class="node-label">Alfroh Postai</span>
+                                <p class="node-label-cargo">SECRETÁRIO</p>
                             </a>
                         </li>
                     </ul>
@@ -94,9 +80,9 @@
                     <ul class="funcionarios">
                         <li class="tree-node">
                             <a href="#" class="node-link">
-                                <img src="imagens/henrique.jpg" alt="Employee Image" class="node-image">
-                                <span class="node-label">Henrique</span>
-                                <p class="node-label-cargo">ESTÁGIARIO</p>
+                                <img src="imagens/sec-maria.jpg" alt="Employee Image" class="node-image">
+                                <span class="node-label">Maria A. Faggiani</span>
+                                <p class="node-label-cargo">SECRETÁRIA</p>
                             </a>
                         </li>
                     </ul>
@@ -114,9 +100,9 @@
                     <ul class="funcionarios">
                         <li class="tree-node">
                             <a href="#" class="node-link">
-                                <img src="imagens/mariana.jpg" alt="Employee Image" class="node-image">
-                                <span class="node-label">Mariana</span>
-                                <p class="node-label-cargo">ESTAGIÁRIA</p>
+                                <img src="imagens/sec-luiz.jpg" alt="Employee Image" class="node-image">
+                                <span class="node-label">Luiz C. G. Alves Junior</span>
+                                <p class="node-label-cargo">SECRETÁRIO</p>
                             </a>
                         </li>
                     </ul>
@@ -134,9 +120,9 @@
                     <ul class="funcionarios">
                         <li class="tree-node">
                             <a href="#" class="node-link">
-                                <img src="imagens/mariana.jpg" alt="Employee Image" class="node-image">
-                                <span class="node-label"></span>
-                                <p class="node-label-cargo">ESTAGIÁRIA</p>
+                                <img src="imagens/sec-adilson.jpg" alt="Employee Image" class="node-image">
+                                <span class="node-label">Adilson Mesch</span>
+                                <p class="node-label-cargo">SECRETÁRIO</p>
                             </a>
                         </li>
                     </ul>
@@ -154,9 +140,9 @@
                     <ul class="funcionarios">
                         <li class="tree-node">
                             <a href="#" class="node-link">
-                                <img src="imagens/mariana.jpg" alt="Employee Image" class="node-image">
-                                <span class="node-label">Mariana</span>
-                                <p class="node-label-cargo">ESTAGIÁRIA</p>
+                                <img src="imagens/none.png" alt="Employee Image" class="node-image">
+                                <span class="node-label">Giscard A. W. Bertoldi</span>
+                                <p class="node-label-cargo">SECRETÁRIO</p>
                             </a>
                         </li>
                     </ul>
@@ -175,9 +161,9 @@
                     <ul class="funcionarios">
                         <li class="tree-node">
                             <a href="#" class="node-link">
-                                <img src="imagens/henrique.jpg" alt="Employee Image" class="node-image">
-                                <span class="node-label">Henrique</span>
-                                <p class="node-label-cargo">ESTÁGIARIO</p>
+                                <img src="imagens/sec-marlon.jpg" alt="Employee Image" class="node-image">
+                                <span class="node-label">Marlon Rahn</span>
+                                <p class="node-label-cargo">SECRETÁRIO</p>
                             </a>
                         </li>
                     </ul>
@@ -190,9 +176,9 @@
                     <ul class="funcionarios">
                         <li class="tree-node">
                             <a href="#" class="node-link">
-                                <img src="imagens/mariana.jpg" alt="Employee Image" class="node-image">
-                                <span class="node-label">Mariana</span>
-                                <p class="node-label-cargo">ESTAGIÁRIA</p>
+                                <img src="imagens/sec-alfredo.jpg" alt="Employee Image" class="node-image">
+                                <span class="node-label">Alfredo João Berri</span>
+                                <p class="node-label-cargo">SECRETÁRIO</p>
                             </a>
                         </li>
                     </ul>
