mod: div line on simplifica

--- a/prefeitura.html
+++ b/prefeitura.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="css/prefeitura.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=0.3">
-    <title>ORGANOGRAMA PREFEITURA</title>
+    <link rel="icon" type="image/png" href="imagens/BandeiraDeTimbo.jpg">
+    <title>SIMPLIFICA TIMBÓ: PREFEITURA</title>
 </head>
 <body>
     <nav class="menu">
