--- a/sobre.html
+++ b/sobre.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="css/estilo.css">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=0.3">
+        <link rel="icon" type="image/png" href="imagens/BandeiraDeTimbo.jpg">
         <title>SIMPLIFICA TIMBÓ: SOBRE</title>
     </head>
     <body>  
@@ -25,7 +26,6 @@
                 <li class="menu-item"><a href="sobre.html">Sobre</a></li>
             </ul>
         </nav>
-
         <div class="titulo-principal">
             <h1>Sobre o Projeto Simplifica Timbó</h1>
         </div>
@@ -38,8 +38,11 @@
             <p> <br>Disponibiliza canais de atendimento ao público de forma Presencial, Virtual – com todos benefícios da comunicação via WhatsApp, e-mail, autoatendimento e telefônico. </p> 
             <h2> <br>Funciona de segunda a sexta-feira, das 8h às 17h (sem fechar para o almoço). </h2> 
         </div>
-
+        <div class="image-of-complex">
+            <img src="imagens/simplifica-frente.jpeg" alt="imagem">
+        </div>
         <script src="js/script.js"></script>
         <script src="js/codigo.js"></script>
+        
     </body>
 </html>
