mod: pref gabinete

--- a/prefeitura.html
+++ b/prefeitura.html
@@ -31,7 +31,7 @@
         <div class="tree">
                     <!-- GESTÃO -->
                     <ul class="tree-root">
-                        <li class="tree-node-gestao-setor">
+                        <li class="tree-node">
                             <a href="#" class="node-link setor" id="gestao-link">
                                 <img src="imagens/pref.png" alt="Setor Image" class="node-image">
                                 <span class="node-label">Gabinete</span>
@@ -39,14 +39,26 @@
                             <ul class="coordenadores">
                                 <li class="tree-node">
                                     <a href="#" class="node-link coordenador">
-                                        <img src="imagens/pref-edson.jpg" alt="Coordenador Image" class="node-image">
+                                        <img src="imagens/pref-jorge.jpg" alt="Coordenador Image" class="node-image">
+                                        <span class="node-label">JORGE KRUEGER</span>
+                                        <p class="node-label-cargo">PREFEITO</p>
+                                    </a>
+                                    <a href="#" class="node-link coordenador">
+                                        <img src="imagens/vice-guilherme.jpg" alt="Coordenador Image" class="node-image">
+                                        <span class="node-label">Guilherme V. Junior</span>
+                                        <p class="node-label-cargo">VICE-PREFEITO</p>
+                                    </a>
+                            <ul class="funcionarios">
+                                <li class="tree-node">
+                                    <a href="#" class="node-link">
+                                        <img src="imagens/pref-edson.jpg" alt="Employee Image" class="node-image">
                                         <span class="node-label">Edson José Bona</span>
                                         <p class="node-label-cargo">PRESIDENTE</p>
                                     </a>
                                 </li>
                                 <li class="tree-node">
-                                    <a href="#" class="node-link coordenador">
-                                        <img src="imagens/vice-douglas.jpg" alt="Coordenador Image" class="node-image">
+                                    <a href="#" class="node-link">
+                                        <img src="imagens/vice-douglas.jpg" alt="Employee Image" class="node-image">
                                         <span class="node-label">Douglas Emanuel Marchetti</span>
                                         <p class="node-label-cargo">VICE-PRESIDENTE</p>
                                     </a>
@@ -205,6 +217,7 @@
 </div>
 
 <script src="js/codigo.js"></script>
+
 </body>
 
 </html>
