--- a/index.html
+++ b/index.html
@@ -739,11 +739,12 @@
                                 <p class="node-label-cargo">SERVIDORA</p>
                             </a>
                             <ul class="funcionarios">
-                                <li class="tree-node">
+                                <li class="tree-node-vespertino">
                                     <a href="#" class="node-link">
                                         <img src="imagens/jackson.jpg" alt="Employee Image" class="node-image">
                                         <span class="node-label">jackson</span>
                                         <p class="node-label-cargo">ESTAGIÁRIO</p>
+                                        <p class="node-label-cargo">Vespertino</p>
                                     </a>
                                 <li class="tree-node">
                                     <a href="#" class="node-link">
